--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyrVVYOhLO/NsHPivTdifl"
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,12 +17,22 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/martinasalis/CoronavirusTweetClassification/blob/main/Untitled2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "60LPVo06aQyo"
       },
       "source": [
-        ""
+        "x+y=1"
       ],
       "execution_count": null,
       "outputs": []
