--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyrVVYOhLO/NsHPivTdifl",
+      "authorship_tag": "ABX9TyNbHFKyTg/VxNJVpvLccwhk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,155 @@
         "id": "FfRXiCC3cKBo"
       },
       "source": [
-        ""
+        "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iY6QPDapgIPc",
+        "outputId": "6f11f2c1-df20-414d-f878-e48c465081de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KIsr0Qcofs7R",
+        "outputId": "e52a934f-9284-4040-8dad-6975b090d8a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 205
+        }
+      },
+      "source": [
+        "def load_dataset():\n",
+        "\n",
+        "  # Load train data\n",
+        "  train = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_train.csv', encoding = \"ISO-8859-1\")\n",
+        "\n",
+        "  # Load test data\n",
+        "  test = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_test.csv', encoding = \"ISO-8859-1\")\n",
+        "\n",
+        "  return train, test\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>UserName</th>\n",
+              "      <th>ScreenName</th>\n",
+              "      <th>Location</th>\n",
+              "      <th>TweetAt</th>\n",
+              "      <th>OriginalTweet</th>\n",
+              "      <th>Sentiment</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3799</td>\n",
+              "      <td>48751</td>\n",
+              "      <td>London</td>\n",
+              "      <td>16-03-2020</td>\n",
+              "      <td>@MeNyrbie @Phil_Gahan @Chrisitv https://t.co/i...</td>\n",
+              "      <td>Neutral</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3800</td>\n",
+              "      <td>48752</td>\n",
+              "      <td>UK</td>\n",
+              "      <td>16-03-2020</td>\n",
+              "      <td>advice Talk to your neighbours family to excha...</td>\n",
+              "      <td>Positive</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3801</td>\n",
+              "      <td>48753</td>\n",
+              "      <td>Vagabonds</td>\n",
+              "      <td>16-03-2020</td>\n",
+              "      <td>Coronavirus Australia: Woolworths to give elde...</td>\n",
+              "      <td>Positive</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3802</td>\n",
+              "      <td>48754</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>16-03-2020</td>\n",
+              "      <td>My food stock is not the only one which is emp...</td>\n",
+              "      <td>Positive</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3803</td>\n",
+              "      <td>48755</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>16-03-2020</td>\n",
+              "      <td>Me, ready to go at supermarket during the #COV...</td>\n",
+              "      <td>Extremely Negative</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   UserName  ...           Sentiment\n",
+              "0      3799  ...             Neutral\n",
+              "1      3800  ...            Positive\n",
+              "2      3801  ...            Positive\n",
+              "3      3802  ...            Positive\n",
+              "4      3803  ...  Extremely Negative\n",
+              "\n",
+              "[5 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
