Added dataset's print

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbHFKyTg/VxNJVpvLccwhk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,28 +34,28 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iY6QPDapgIPc",
-        "outputId": "6f11f2c1-df20-414d-f878-e48c465081de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "24009399-4a3e-4d82-866e-89be869782aa"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -65,25 +64,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KIsr0Qcofs7R",
-        "outputId": "e52a934f-9284-4040-8dad-6975b090d8a9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 205
-        }
+        "id": "KIsr0Qcofs7R"
       },
       "source": [
         "def load_dataset():\n",
         "\n",
-        "  # Load train data\n",
-        "  train = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_train.csv', encoding = \"ISO-8859-1\")\n",
+        "    # Load train data\n",
+        "    train = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_train.csv', encoding = \"ISO-8859-1\")\n",
         "\n",
-        "  # Load test data\n",
-        "  test = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_test.csv', encoding = \"ISO-8859-1\")\n",
+        "    # Load test data\n",
+        "    test = pd.read_csv('/content/drive/MyDrive/DLA_dataset/Corona_NLP_test.csv', encoding = \"ISO-8859-1\")\n",
         "\n",
-        "  return train, test\n"
+        "    return train, test\n"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3PyT6disiUQM",
+        "outputId": "d1d5d2d1-90c4-4035-b0fa-8334acbf1c46",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "train, test = load_dataset()\n",
+        "\n",
+        "test.head()\n",
+        "\n",
+        "test.head()"
+      ],
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,48 +132,48 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>3799</td>\n",
-              "      <td>48751</td>\n",
-              "      <td>London</td>\n",
-              "      <td>16-03-2020</td>\n",
-              "      <td>@MeNyrbie @Phil_Gahan @Chrisitv https://t.co/i...</td>\n",
-              "      <td>Neutral</td>\n",
+              "      <td>1</td>\n",
+              "      <td>44953</td>\n",
+              "      <td>NYC</td>\n",
+              "      <td>02-03-2020</td>\n",
+              "      <td>TRENDING: New Yorkers encounter empty supermar...</td>\n",
+              "      <td>Extremely Negative</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>3800</td>\n",
-              "      <td>48752</td>\n",
-              "      <td>UK</td>\n",
-              "      <td>16-03-2020</td>\n",
-              "      <td>advice Talk to your neighbours family to excha...</td>\n",
+              "      <td>2</td>\n",
+              "      <td>44954</td>\n",
+              "      <td>Seattle, WA</td>\n",
+              "      <td>02-03-2020</td>\n",
+              "      <td>When I couldn't find hand sanitizer at Fred Me...</td>\n",
               "      <td>Positive</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>3801</td>\n",
-              "      <td>48753</td>\n",
-              "      <td>Vagabonds</td>\n",
-              "      <td>16-03-2020</td>\n",
-              "      <td>Coronavirus Australia: Woolworths to give elde...</td>\n",
-              "      <td>Positive</td>\n",
+              "      <td>3</td>\n",
+              "      <td>44955</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>02-03-2020</td>\n",
+              "      <td>Find out how you can protect yourself and love...</td>\n",
+              "      <td>Extremely Positive</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3802</td>\n",
-              "      <td>48754</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>16-03-2020</td>\n",
-              "      <td>My food stock is not the only one which is emp...</td>\n",
-              "      <td>Positive</td>\n",
+              "      <td>4</td>\n",
+              "      <td>44956</td>\n",
+              "      <td>Chicagoland</td>\n",
+              "      <td>02-03-2020</td>\n",
+              "      <td>#Panic buying hits #NewYork City as anxious sh...</td>\n",
+              "      <td>Negative</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>3803</td>\n",
-              "      <td>48755</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>16-03-2020</td>\n",
-              "      <td>Me, ready to go at supermarket during the #COV...</td>\n",
-              "      <td>Extremely Negative</td>\n",
+              "      <td>5</td>\n",
+              "      <td>44957</td>\n",
+              "      <td>Melbourne, Victoria</td>\n",
+              "      <td>03-03-2020</td>\n",
+              "      <td>#toiletpaper #dunnypaper #coronavirus #coronav...</td>\n",
+              "      <td>Neutral</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -167,11 +181,11 @@
             ],
             "text/plain": [
               "   UserName  ...           Sentiment\n",
-              "0      3799  ...             Neutral\n",
-              "1      3800  ...            Positive\n",
-              "2      3801  ...            Positive\n",
-              "3      3802  ...            Positive\n",
-              "4      3803  ...  Extremely Negative\n",
+              "0         1  ...  Extremely Negative\n",
+              "1         2  ...            Positive\n",
+              "2         3  ...  Extremely Positive\n",
+              "3         4  ...            Negative\n",
+              "4         5  ...             Neutral\n",
               "\n",
               "[5 rows x 6 columns]"
             ]
@@ -179,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     }
